// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WelcomeScreen should render correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <Flex
    align="center"
    justify="center"
    style={
      Object {
        "paddingHorizontal": 60,
      }
    }
    value={1}
  >
    <Flex
      align="start"
      justify="center"
      value={3}
    >
      <Text
        header={true}
        style={
          Object {
            "color": "#52C5DC",
            "fontSize": 48,
          }
        }
      >
        welcome!
      </Text>
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 24,
            "lineHeight": 32,
            "paddingVertical": 10,
            "textAlign": "left",
          }
        }
      >
        Growing closer to God involves helping others experience Him. MissionHub joins you in that journey by suggesting steps of faith to take with others.
      </Text>
    </Flex>
    <BottomButton
      onPress={[Function]}
      testID="get-started"
      text="Let's Get Started"
    />
  </Flex>
</RCTSafeAreaView>
`;

exports[`WelcomeScreen should render correctly with sign in button 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
    }
  }
>
  <Flex
    align="center"
    justify="center"
    style={
      Object {
        "paddingHorizontal": 60,
      }
    }
    value={1}
  >
    <Flex
      align="start"
      justify="center"
      value={3}
    >
      <Text
        header={true}
        style={
          Object {
            "color": "#52C5DC",
            "fontSize": 48,
          }
        }
      >
        welcome!
      </Text>
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 24,
            "lineHeight": 32,
            "paddingVertical": 10,
            "textAlign": "left",
          }
        }
      >
        Growing closer to God involves helping others experience Him. MissionHub joins you in that journey by suggesting steps of faith to take with others.
      </Text>
    </Flex>
    <Flex
      align="center"
      justify="start"
      value={1}
    >
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 1.5,
            "paddingTop": 2,
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "#52C5DC",
            "height": 48,
            "margin": 8,
            "width": 670,
          }
        }
        testID="sign-in"
        text="SIGN IN"
      />
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 1.5,
            "paddingTop": 2,
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#52C5DC",
            "borderWidth": 1,
            "height": 48,
            "margin": 8,
            "width": 670,
          }
        }
        testID="get-started-sign-in-variant"
        text="GET STARTED"
      />
    </Flex>
  </Flex>
</RCTSafeAreaView>
`;
